src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/B2C_Client_ID_Integration_History__c.object-meta.xml
<CustomObject>
    <description>... represents the B2C Commerce Account Manager authentication request history for a given B2C Client ID.</description>
    <label>B2C Client ID Integration History</label>
    <nameField>
        <displayFormat>B2CCID-{0000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2C Client ID Integration History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>