src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Account_Manager_Url__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Url__c</fullName>
    <description>... represents the full Url that was used to invoke the authentication request.</description>
    <inlineHelpText>... represents the full Url that was used to invoke the authentication request.</inlineHelpText>
    <label>Account Manager Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>