src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Auth_Token_Value__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_Value__c</fullName>
    <description>... represents the recorded B2C Commerce Account Manager AuthToken for a given authentication request.</description>
    <inlineHelpText>... represents the recorded B2C Commerce Account Manager AuthToken for a given authentication request.</inlineHelpText>
    <label>Auth Token Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>