src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/B2C_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>B2C_AuthToken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>... represents the AuthToken provided by the B2C Commerce Account Manager that can be used to power B2C Commerce REST API requests.</description>
    <inlineHelpText>... represents the AuthToken provided by the B2C Commerce Account Manager that can be used to power B2C Commerce REST API requests.</inlineHelpText>
    <label>B2C AuthToken</label>
    <referenceTo>B2C_AuthToken__c</referenceTo>
    <relationshipLabel>B2C Client ID Integration History</relationshipLabel>
    <relationshipName>B2C_Client_ID_Integration_History</relationshipName>
    <type>Lookup</type>
</CustomField>