src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/B2C_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_Client_ID__c</fullName>
    <description>... represents the B2C Client ID that used for a given B2C Commerce Account Manager authentication request.</description>
    <inlineHelpText>... represents the B2C Client ID that used for a given B2C Commerce Account Manager authentication request.</inlineHelpText>
    <label>B2C Client ID</label>
    <referenceTo>B2C_Client_ID__c</referenceTo>
    <relationshipLabel>B2C Client ID Integration History</relationshipLabel>
    <relationshipName>B2C_Client_ID_Integration_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>