src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Has_Error__c.field-meta.xml
<CustomField>
    <fullName>Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes in the last processed integration attempt generated an error.</description>
    <inlineHelpText>... describes in the last processed integration attempt generated an error.</inlineHelpText>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>