src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Has_Token__c.field-meta.xml
<CustomField>
    <fullName>Has_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if an authToken was provided in the response by the B2C Commerce Account Manager.</description>
    <inlineHelpText>... describes if an authToken was provided in the response by the B2C Commerce Account Manager.</inlineHelpText>
    <label>Has Token</label>
    <type>Checkbox</type>
</CustomField>