src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Integration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Integration_JSON__c</fullName>
    <description>... describes the last JSON response provided by the B2C Commerce Account Manager for a given authentication request.</description>
    <inlineHelpText>... describes the last JSON response provided by the B2C Commerce Account Manager for a given authentication request.</inlineHelpText>
    <label>Integration JSON</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>