src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Integration_Payload__c.field-meta.xml
<CustomField>
    <fullName>Integration_Payload__c</fullName>
    <description>... describes the last authorization request payload delivered to the B2C Commerce Account Manager.</description>
    <inlineHelpText>... describes the last authorization request payload delivered to the B2C Commerce Account Manager.</inlineHelpText>
    <label>Integration Payload</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>