src/sfdc/base/main/default/objects/B2C_Client_ID_Integration_History__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>... represents the httpStatus code last recorded when record-detail integration was processed.</description>
    <inlineHelpText>... represents the httpStatus code last recorded when record-detail integration was processed.</inlineHelpText>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>